1998-12-30  Jeff Garzik  <jgarzik@pobox.com>

	* gncal/calendar.c, gncal/gnome-cal.c, gncal/main.c,
	  gncal/quick-view.c:
	s/g_copy_strings/g_strconcat/

1998-12-16  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	Rewrote the old and broken alarm system.  It never actually
	worked properly.  Now it works properly, and I figured a nice way
	to get the Audio alarm do something nicer (it is now like an alarm
	clock :-). 
	
	* gnome-cal.c (calendar_notify): Now we take a CalendarAlarm to
	actually distinguish which alarm was triggered.

	* alarm.c (alarm_ready): The code was only activating the first
	alarm.  Reschedule the timer upon delivery of an alarm.

1998-12-14  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* year-view.c (idle_handler): Use the allocation size instead of
	the old fields in the canvas structure.

	* goto.c (create_days): Use gtk_widget_set_usize() instead of
	gnome_canvas_set_size().
	* quick-view.c (setup_event_list): Likewise.

1998-12-09  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-todo.c (simple_todo_editor): Use gnome_dialog_set_parent. 
	* goto.c (goto_dialog): ditto
	* prop.c (properties): ditto.

1998-11-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* eventedit.c (ee_rp_init_exceptions): Update GtkClist usage. 

1998-11-23  Andrew T. Veliath  <andrewtv@usa.net>

	* gncal-day-panel.c (gncal_day_panel_new): Use
	gtk_scrolled_window_add_with_viewport instead of
	gtk_container_add (gtk changes).

1998-11-23  Herbert V. Riedel <hvr@hvrlab.ml.org>

	* eventedit.c: use GPOINTER_TO_INT 

	* gncal-todo.c: same.

1998-11-22  Matthew Wilson  <msw@redhat.com>

	* main.c: Fixed the popt event parsing callback to have the
	correct number of arguments.  This stops it from segfaulting.

1998-11-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* eventedit.c (ee_classification_widgets): Doh.  Fixed stupid bug
	where the classification buttons were not being set correctly.